--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,20 +1,14 @@
 # Core Sphinx documentation generator
-sphinx==7.2.6
+sphinx==8.2.3
 
 # Read the Docs theme
-sphinx-rtd-theme==2.0.0
+sphinx-rtd-theme==3.1.0
 
-# Optional but recommended for development
+# Optional but recommended
 sphinx-autobuild==2024.2.4
 
 # For markdown support (optional)
-myst-parser==2.0.0
+myst-parser==4.0.0
 
 # For better cross-referencing
-sphinx-autodoc-typehints==2.0.0
-
-# For building diagrams (optional, if you need them)
-sphinxcontrib-mermaid==0.9.2
-
-# For better code highlighting
-pygments==2.17.2
+sphinx-autodoc-typehints==2.5.0
